--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .page {
-  width: min(100% - 40px, 1200px);
+  width: min(100% - 40px, 1500px);
   margin: 0;
   margin-inline: auto;
   padding: 0;
@@ -11,15 +11,26 @@
 
 .card-conteiner{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   row-gap: 20px;
   column-gap: 50px;
 }
 
 .card{
-  margin: 0;
   padding: 20px;
 
   background-color: rgb(252, 174, 148);
   border-radius: 10px;
+}
+
+.card__img{
+  width: 100%;
+  height: 300px;
+}
+
+.card__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0 0;
 }
